--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,12 +4,15 @@
 
 :root {
     --primary-color: #fffcf4;
+    --font-poppins: "Poppins", sans-serif;
+    --font-sen: "Sen", sans-serif;
 }
 
 html,
 body {
     scroll-behavior: smooth;
     height: 2000px;
+    font-family: var(--font-poppins);
 }
 
 html {
@@ -33,12 +36,20 @@ html {
     opacity: 0.8;
 }
 
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 3);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 /* ========= Navbar ============= */
 .header-fixed {
     background: var(--primary-color);
     padding-top: 24px;
     position: sticky;
     top: -24px;
+    z-index: 100;
 }
 
 .header-fixed .body {
@@ -61,13 +72,12 @@ html {
 .header-fixed a {
     text-decoration: none;
     color: #5f5b53;
-    font-family: Poppins;
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.75;
 }
 
-.header-fixed a:hover:not(li.active a) {
+.header-fixed li a:hover:not(li.active a) {
     text-shadow: 1px 0 0 currentColor;
     color: #171100;
 }
@@ -78,7 +88,6 @@ html {
 
 .header-fixed li.active a {
     color: #171100;
-    font-family: Poppins;
     font-size: 1.6rem;
     font-weight: 600;
     line-height: 1.75rem;
@@ -105,9 +114,170 @@ html {
     border-radius: 24.5px;
     background: #171100;
     color: #fff;
-    text-align: center;
-    font-family: Poppins;
     font-size: 1.6rem;
     font-weight: 600;
     line-height: 1.75;
+}
+
+/* ============= Hero ================== */
+.hero {
+    padding-top: 52px;
+    height: calc(100vh - 98px);
+    background: var(--primary-color);
+}
+
+.hero .body {
+    display: flex;
+    align-items: center;
+}
+
+/* ============== Hero right =============== */
+.hero .media-block {
+    position: relative;
+}
+
+.hero .media-block .hero-img {
+    width: 470px;
+    height: 685px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.hero .media-block .media-card {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    gap: 14px;
+    width: 270px;
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+    padding: 24px 24px;
+    bottom: 48px;
+    left: 300px;
+}
+
+.hero .media-card .card-item {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+}
+
+.hero .media-card .icon {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero .media-card .info .content {
+    color: #5f5b53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85;
+}
+
+.hero .media-card .info .label {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+/* ================= Hero left ============= */
+.hero .content-block {
+    margin-left: 230px;
+    width: 470px;
+}
+
+.hero .content-block .title {
+    color: #171100;
+    font-family: var(--font-sen);
+    font-size: 5.8rem;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: -0.116rem;
+}
+
+.hero .content-block .desc {
+    color: #5f5b53;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+    margin-top: 22px;
+}
+
+.hero .content-block .cta-group {
+    margin-top: 38px;
+    display: flex;
+    gap: 28px;
+    align-items: center;
+}
+
+.hero .content-block .cta-group .hero-cta {
+    width: 180px;
+    height: 64px;
+    border-radius: 32px;
+    background: #ffb900;
+    color: #fff;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+    text-decoration: none;
+    text-align: center;
+    padding: 17px 0;
+}
+
+.hero .content-block .cta-group .watch-video {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+}
+
+.hero .content-block .cta-group .watch-video .icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background: #fff;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.07);
+    text-align: center;
+    padding: 14px 0;
+}
+
+.hero .content-block .cta-group span {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+    margin-left: 14px;
+}
+
+.hero .content-block .desc {
+    color: #5f5b53;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67;
+    margin-top: 48px;
+}
+
+.hero .content-block .stats {
+    display: flex;
+    gap: 28px;
+}
+
+.hero .content-block .stats-info {
+    margin-top: 8px;
+    color: #5f5b53;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.hero .content-block .stats-info strong {
+    color: #171100;
+    font-family: var(--font-sen);
+    font-size: 4.4rem;
+    font-weight: 700;
+    line-height: 1.27;
 }
