--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -317,6 +317,9 @@ html {
 }
 
 .popular-course .popular-top .btn-control {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40px;
     height: 40px;
     border-radius: 40px;
@@ -337,4 +340,104 @@ html {
 
 .popular-course .popular-top .btn-control:hover svg path {
     stroke: #fff;
+}
+
+/* ============== Course List =============== */
+.popular-course .course-list {
+    margin-top: 55px;
+    display: flex;
+    flex: 1;
+    gap: 30px;
+}
+
+.popular-course .course-list .card {
+    border-radius: 12px;
+    background: #fff;
+    border: 1px solid #e2dfda;
+    width: 370px;
+    transition: 0.3s ease;
+}
+
+.popular-course .course-list .card:hover {
+    border-color: transparent;
+    box-shadow: 0 18px 36px 0 rgba(0, 0, 0, 0.05);
+}
+
+.popular-course .course-list .img-course {
+    width: calc(100% + 2px);
+    height: 278px;
+    border-radius: 12px 12px 0 0;
+    object-fit: cover;
+    margin: -1px;
+}
+
+.popular-course .course-list .info {
+    padding: 0 22px 22px 22px;
+}
+
+.popular-course .course-list .top-row {
+    display: flex;
+    margin-top: 16px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.popular-course .course-list .course-name {
+    text-decoration: none;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.popular-course .course-list .evaluate {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.popular-course .course-list .evaluate span {
+    color: #fea31b;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+.popular-course .course-list .desc {
+    margin-top: 6px;
+    width: 326px;
+    color: #5f5b53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85;
+}
+
+.popular-course .course-list .bottom-row {
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.popular-course .course-list .price {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.popular-course .course-list .btn-book {
+    color: #fff;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 50px;
+    width: 118px;
+    height: 50px;
+    border-radius: 25px;
+    background: #171100;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+.popular-course .course-list .btn-book:hover {
+    background: #ffb900;
 }
