--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
 html,
 body {
     scroll-behavior: smooth;
-    height: 2000px;
+    height: 3000px;
     font-family: var(--font-poppins);
 }
 
@@ -439,5 +439,71 @@ html {
 }
 
 .popular-course .course-list .btn-book:hover {
+    background: #ffb900;
+}
+
+/* ============== Feedback =============== */
+.feedback {
+    margin-top: 200px;
+    padding: 96px 135px;
+    background: #2e2100;
+}
+
+.feedback .feedback-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.feedback .student-info .avatar {
+    width: 72px;
+    height: 72px;
+    border-radius: 72px;
+    object-fit: cover;
+}
+
+.feedback .student-info .student-name {
+    color: #f7f7f7;
+    font-family: var(--font-sen);
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.42;
+    margin-top: 18px;
+}
+
+.feedback .student-info .class-name {
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.86;
+    margin-top: 4px;
+}
+
+.feedback .feedback-detail {
+    margin-left: 241px;
+}
+
+.feedback .feedback-detail .desc {
+    width: 740px;
+    color: #fff;
+    font-size: 2.6rem;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 1.54;
+    margin-left: 30px;
+}
+
+.feedback .pagination {
+    display: flex;
+    gap: 6px;
+}
+
+.feedback .pagination-item {
+    width: 6px;
+    height: 6px;
+    border-radius: 6px;
+    background: #634700;
+}
+
+.feedback .pagination-item.active {
     background: #ffb900;
 }
