--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -507,3 +507,99 @@ html {
 .feedback .pagination-item.active {
     background: #ffb900;
 }
+
+/* =============== Features ============== */
+.features {
+    margin-top: 200px;
+}
+
+.features .feature-info {
+    width: 50%;
+}
+
+.features .title {
+    color: #171100;
+    font-family: var(--font-sen);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.26;
+    letter-spacing: -0.076rem;
+}
+
+.features .desc {
+    margin-top: 16px;
+    color: #5f5b53;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.features .btn-cta {
+    width: 137px;
+    height: 50px;
+    border-radius: 26px;
+    background: #ffb900;
+    color: #fff;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75;
+    text-decoration: none;
+    line-height: 50px;
+    margin-top: 32px;
+}
+
+/* Top */
+.features .feature-top {
+    display: flex;
+    align-items: center;
+}
+
+.features .feature-top img {
+    width: 270px;
+    height: 404px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+
+.features .feature-top .feature-img img:first-child {
+    position: relative;
+    top: 34px;
+    margin-right: 30px;
+}
+
+.features .feature-top .feature-info {
+    padding-left: 130px;
+}
+
+.features .feature-top .title {
+    width: 470px;
+}
+
+.features .feature-top .desc {
+    width: 458px;
+}
+
+/* Bottom */
+.features .feature-bottom {
+    margin-top: 200px;
+    display: flex;
+    align-items: center;
+}
+
+.features .feature-bottom .feature-img img {
+    width: 470px;
+    height: 440px;
+    border-radius: 20px;
+    object-fit: cover;
+    position: relative;
+    left: 130px;
+}
+
+.features .feature-bottom .title {
+    width: 570px;
+}
+
+.features .feature-bottom .desc {
+    width: 570px;
+}
