--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -744,7 +744,6 @@ html {
 .footer .body {
     display: flex;
     gap: 130px;
-    flex-shrink: 0;
 }
 
 .footer .column:first-child {
@@ -752,7 +751,7 @@ html {
 }
 
 .footer .column:last-child a {
-    text-wrap: wrap;
+    white-space: normal;
 }
 
 .footer .column .slogan {
@@ -795,7 +794,7 @@ html {
     font-size: 1.4rem;
     font-weight: 400;
     line-height: 1.86;
-    text-wrap: nowrap;
+    white-space: nowrap;
     text-decoration: none;
     max-width: 231px;
 }
