--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,7 +105,7 @@ html {
 }
 
 .header-fixed .action {
-    margin-left: 49px;
+    margin-left: auto;
 }
 
 .header-fixed .sign-up-btn {
@@ -756,6 +756,7 @@ html {
 
 .footer .column .slogan {
     width: 267px;
+    max-width: 100%;
     color: #bfbcb2;
     font-size: 1.4rem;
     font-weight: 400;
